# pipeline_etl_weather_data

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
dags/: weather_dag.py
dashboard/: Dockerfile  __init__.py  app.py
docker/: docker-compose.yml
notebooks/: analysis_data.ipynb
src/: __init__.py  extract_data.py  load_data.py  transform_data.py
